--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Dec 2024-Feb 2025</span>
+						<span class="date">July 2024-Oct 2025</span>
 						<h2>AI ChatBot_Agent</h2>
 						<span class="position">RD National College</span>
 						<p class="mt-4">Developed an <b>AI-powered voice</b> and text interaction system as part of a college project  
@@ -351,17 +351,18 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Dec 2024-Feb 2025</span>
-						<h2>AI ChatBot_Agent</h2>
+						<span class="date">Jan 2024-April 2025</span>
+						<h2>Tic-Tac-Toe_AI</h2>
 						<span class="position">RD National College</span>
-						<p class="mt-4">Developed an <b>AI-powered voice</b> and text interaction system as part of a college project  
+						<p class="mt-4">Developed an <b>AI-powered Tic-Tac-Toe game</b> using web technologies as part of a college project <br> 
 							<ul>
-								<li>Built a Flask-based backend to process voice and text inputs, enabling seamless interaction with the Llama 3.2 AI model.</li>
-								<li>Integrated Google Speech Recognition API for converting voice inputs to text and Pyttsx3 for generating voice responses.</li>
-								<li>Utilized Python and Flask to manage API communication with the AI model, ensuring efficient request handling and response generation.</li>
-								<li>Designed the system to enhance user experience in various applications, including AI assistants, smart home automation, customer support, and healthcare.</li>
+								<li>Built the game logic entirely with JavaScript, enabling both player vs player and player vs AI modes.</li><br>
+								<li>Implemented the Minimax algorithm to create an unbeatable AI opponent that plays optimally.</li><br>
+								<li>Designed an interactive and responsive user interface using HTML5 and CSS3 for a smooth gaming experience.</li>
+								<li>Focused on clean design, real-time move validation, win/draw detection, and dynamic UI updates without page reloads.</li>
 							</ul>
 						</p>
+
 						
 					</div>
 
@@ -418,11 +419,11 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/aditya93715" class="block-20 zoom-effect" style="background-image: url('images/landingpage.png');">
+              <a href="https://github.com/aditya93715" class="block-20 zoom-effect" style="background-image: url('images/chatbot_AI.jpeg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/aditya93715">AI(ChatBot_Agent) </a></h3>
+                <h3 class="heading"><a href="https://github.com/aditya93715/Chatbot-Assistent.git">AI(ChatBot_Assistent) </a></h3>
                 <p>Developed an AI-powered voice and text interaction system using Flask, Google Speech Recognition API, 
 					Pyttsx3, and the Llama 3.2 AI model. The system processes voice and text inputs to generate intelligent 
 					responses, enabling seamless interaction. </p>
@@ -431,16 +432,16 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/aditya93715" class="block-20 zoom-effect" style="background-image: url('images/stopwatch.jpg');">
+              <a href="https://tic-tac-toe-steel-three.vercel.app/" class="block-20 zoom-effect" style="background-image: url('images/Tic_Tac_Toe.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/aditya93715">Stopwatch Web Application</a></h3>
-                <p>Developed a stopwatch web app using HTML, CSS, and JavaScript. The app includes features such as start/pause, lap recording, and reset functionality, providing a user-friendly interface for time tracking.</p>
+                <h3 class="heading"><a href="https://tic-tac-toe-steel-three.vercel.app/">Tic-Tac-Toe_AI</a></h3>
+                <p>Developed a Tic-Tac-Toe_AI game using HTML, CSS, and JavaScript. The app includes features such as start and play again, providing a user-friendly interface for fun and Entertainment.</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 d-flex ftco-animate">
+         <!-- <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
               <a href="https://github.com/aditya93715" class="block-20 zoom-effect" style="background-image: url('images/tic tac toe.webp');">
               </a>
@@ -453,8 +454,7 @@
           </div>
         </div>
 	<br>
-		<!-- added justify-content-center to center align the last two projects -->
-		<div class="row d-flex justify-content-center">  
+				<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
 				<a href="https://github.com/aditya93715" class="block-20 zoom-effect" style="background-image: url('images/weather.jpg');">
@@ -492,7 +492,7 @@
               </div>
             </div>
           </div>
-  <!--      <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
+           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
                 <strong class="number" data-number="30">0</strong>
